--- a/pong/Cargo.toml
+++ b/pong/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.15.2"
+bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
 clap = { version = "4.5.30", features = ["derive"] }
